--- a/config.json
+++ b/config.json
@@ -4,7 +4,7 @@
   "features": {
     "createFolders": true,
     "createSupportUser": true,
-    "setSecurityPolicies": true,
+    "setSecurityPolicies": false,
     "enableTranscriptLogging": true
   },
   "folderProvisioning": {
